<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_above="@+id/function_button">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/up_st"
                    android:layout_width="@dimen/setting_item_width"
                    android:layout_height="wrap_content"
                    android:text="@string/forward"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/setting_item_text_size"/>
                <EditText
                    android:layout_toRightOf="@+id/up_st"
                    android:id="@+id/up_setting_edt"
                    android:layout_width="@dimen/setting_edtxt_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/down_st"
                    android:layout_width="@dimen/setting_item_width"
                    android:layout_height="wrap_content"
                    android:text="@string/backward"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/setting_item_text_size"/>
                <EditText
                    android:layout_toRightOf="@+id/down_st"
                    android:id="@+id/down_setting_edt"
                    android:layout_width="@dimen/setting_edtxt_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/stop_st"
                    android:layout_width="@dimen/setting_item_width"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/setting_item_text_size"/>
                <EditText
                    android:layout_toRightOf="@+id/stop_st"
                    android:id="@+id/stop_setting_edt"
                    android:layout_width="@dimen/setting_edtxt_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/right_st"
                    android:layout_width="@dimen/setting_item_width"
                    android:layout_height="wrap_content"
                    android:text="@string/right"
                    android:textStyle="bold"
                    android:textSize="@dimen/setting_item_text_size"
                    android:gravity="center"
                    android:layout_centerInParent="true"/>
                <EditText
                    android:layout_toRightOf="@+id/right_st"
                    android:id="@+id/right_setting_edt"
                    android:layout_width="@dimen/setting_edtxt_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/left_st"
                    android:layout_width="@dimen/setting_item_width"
                    android:layout_height="wrap_content"
                    android:text="@string/left"
                    android:textStyle="bold"
                    android:textSize="@dimen/setting_item_text_size"
                    android:gravity="center"
                    android:layout_centerInParent="true"/>
                <EditText
                    android:layout_toRightOf="@+id/left_st"
                    android:id="@+id/left_setting_edt"
                    android:layout_width="@dimen/setting_edtxt_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/right_forward_st"
                    android:layout_width="@dimen/setting_item_width"
                    android:layout_height="wrap_content"
                    android:text="@string/right_forward"
                    android:textStyle="bold"
                    android:textSize="@dimen/setting_item_text_size"
                    android:gravity="center"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_toRightOf="@+id/right_forward_st"
                    android:id="@+id/right_forward_setting_edt"
                    android:layout_width="@dimen/setting_edtxt_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/left_forward_st"
                    android:layout_width="@dimen/setting_item_width"
                    android:layout_height="wrap_content"
                    android:text="@string/left_forward"
                    android:textStyle="bold"
                    android:textSize="@dimen/setting_item_text_size"
                    android:gravity="center"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_toRightOf="@+id/left_forward_st"
                    android:id="@+id/left_forward_setting_edt"
                    android:layout_width="@dimen/setting_edtxt_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/right_backward_st"
                    android:layout_width="@dimen/setting_item_width"
                    android:layout_height="wrap_content"
                    android:text="@string/right_backward"
                    android:textStyle="bold"
                    android:textSize="@dimen/setting_item_text_size"
                    android:gravity="center"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_toRightOf="@+id/right_backward_st"
                    android:id="@+id/right_backward_setting_edt"
                    android:layout_width="@dimen/setting_edtxt_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/left_backward_st"
                    android:layout_width="@dimen/setting_item_width"
                    android:layout_height="wrap_content"
                    android:text="@string/left_backward"
                    android:textStyle="bold"
                    android:textSize="@dimen/setting_item_text_size"
                    android:gravity="center"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_toRightOf="@+id/left_backward_st"
                    android:id="@+id/left_backward_setting_edt"
                    android:layout_width="@dimen/setting_edtxt_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/function_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/save_btn"
        android:layout_marginBottom="5dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/p0_st"
                android:layout_width="@dimen/setting_item_width"
                android:layout_height="wrap_content"
                android:text="@string/p0"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="@dimen/setting_item_text_size"/>
            <EditText
                android:layout_toRightOf="@+id/p0_st"
                android:id="@+id/p0_setting_edt"
                android:layout_width="@dimen/setting_edtxt_width"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/p1_st"
                android:layout_width="@dimen/setting_item_width"
                android:layout_height="wrap_content"
                android:text="@string/p1"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:textSize="@dimen/setting_item_text_size"/>
            <EditText
                android:layout_toRightOf="@+id/p1_st"
                android:id="@+id/p1_setting_edt"
                android:layout_width="@dimen/setting_edtxt_width"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/p2_st"
                android:layout_width="@dimen/setting_item_width"
                android:layout_height="wrap_content"
                android:text="@string/p2"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:textSize="@dimen/setting_item_text_size"/>
            <EditText
                android:layout_toRightOf="@+id/p2_st"
                android:id="@+id/p2_setting_edt"
                android:layout_width="@dimen/setting_edtxt_width"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/p3_st"
                android:layout_width="@dimen/setting_item_width"
                android:layout_height="wrap_content"
                android:text="@string/p3"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:textSize="@dimen/setting_item_text_size"/>
            <EditText
                android:layout_toRightOf="@+id/p3_st"
                android:id="@+id/p3_setting_edt"
                android:layout_width="@dimen/setting_edtxt_width"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>